--- a/clase04/pom.xml
+++ b/clase04/pom.xml
@@ -30,4 +30,14 @@
 			<version>2.6</version>
 		</dependency>
 	</dependencies>
+
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+		<configuration>
+			<source>1.6</source>
+			<target>1.6</target>
+		</configuration>
+	</plugin>
 </project>
