Clase 05. Herencia múltiple, polimorfismo, manejo de excetions.

--- a/clase05/pom.xml
+++ b/clase05/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>py.edu.uca.diplomado</groupId>
-	<artifactId>clase04</artifactId>
+	<artifactId>clase05</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>clase04</name>
+	<name>clase05</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -30,5 +30,19 @@
 			<version>2.6</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+	<plugins>
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+		<configuration>
+			<source>1.6</source>
+			<target>1.6</target>
+		</configuration>
+	</plugin>
+	</plugins>
+	</build>
 </project>
 
