--- a/clase07/pom.xml
+++ b/clase07/pom.xml
@@ -29,6 +29,23 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<!-- Agregando la dependencia de hibernate, el maven recursivamente 
+			agregará al Build Path y descargará las librerías del repositorio
+			para todas las dependencias que necesite el hibernate 
+			para funcionar -->
+		<!--
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.2.1.Final</version>
+		</dependency>
+		-->
+
 	</dependencies>
 
 </project>
